<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="18sp"/>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/gatt_services_list"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <!--
    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/plain_text_input" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="Send" />-->

    <GridLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/pin_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please enter your pin:"
            android:textSize="24sp"
            />

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="85dp"
            android:layout_row="0"
            android:text="1" />

        <Button
            android:id="@+id/twoBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="80dp"
            android:text="2" />

        <Button
            android:id="@+id/threeBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_marginLeft="245dp"
            android:layout_marginTop="80dp"
            android:text="3" />

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="85dp"
            android:text="4" />

        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="0dp"
            android:text="5" />

        <Button
            android:id="@+id/sixBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_marginLeft="245dp"
            android:layout_marginTop="0dp"
            android:text="6" />

        <Button
            android:id="@+id/sevenBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="85dp"
            android:text="7" />

        <Button
            android:id="@+id/eightBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="0dp"
            android:text="8" />

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_marginLeft="245dp"
            android:layout_marginTop="0dp"
            android:text="9" />

    </GridLayout>

</GridLayout>